Tute session